# chef-_virtual

./: CMakeLists.txt
Test/: test.cpp  test2.cpp
include/: GestorIngredientes.h  GestorRecetas.h  Recetas.h
src/: GestorIngredientes.cpp  GestorRecetas.cpp  Recetas.cpp  main.cpp
